# loan_calculator

./: Makefile  README.md  docker-compose.yml
back/: .dockerignore  .env.sample  .flake8  pyproject.toml
back/api/: urls.py
back/api/v1/: urls.py
back/api/v1/mortgage/: serializers.py  views.py
back/common/: models.py  viewset.py
back/config/: settings.py  urls.py
back/mortgage/: admin.py  models.py
back/mortgage/migrations/: 0001_initial.py
back/mortgage/services/: mortgage_service.py
back/tests/api/v1/mortgage/: test_views.py
front/: Dockerfile  index.html  package.json
front/src/: App.vue
front/src/components/: Button.vue  CustomInput.vue  Layout.vue  MainPanel.vue  SidePanel.vue  Table.vue  Title.vue
front/src/pages/: LoanPaymentCalculator.vue
front/src/plugins/: vuetify.ts
front/src/services/: apiClient.ts  mortgageApiService.ts
front/src/utils/: caseHelpers.ts
